--- a/templates/sinatra.rb.erb
+++ b/templates/sinatra.rb.erb
@@ -1,3 +1,3 @@
-# Tyrone - It'll care the shit out of you
+# Tyrone will care the shit out of you
 gem 'tyrone', '<%= version %>'
-require 'tyrone'
+require 'tyrone/app'
