--- a/templates/layout.haml.erb
+++ b/templates/layout.haml.erb
@@ -6,9 +6,12 @@
     %link{:rel => 'stylesheet', :type => 'text/css', :href => '/css/reset.css'}
     
     %script{:src => '/js/jquery.js', :type => 'text/javascript'}
-    %script{:src => '/js/states.js', :type => 'text/javascript'}
-    %script{:src => '/js/grid.js', :type => 'text/javascript'}
+<% if states %>    %script{:src => '/js/states.js', :type => 'text/javascript'}<% end %>
     %script{:src => '/js/application.js', :type => 'text/javascript'}
-    
+<% if grid %>    - if options.environment == :development
+      %script{:src => '/js/grid.js', :type => 'text/javascript'}
+      :javascript
+        $(document).ready(function(){ $(document.body).grid(); });
+      <% end %>
   %body
     = yield
